# jobTrack

./: .dockerignore  .envrc  .flake8  .gitignore  Dockerfile  JOBTRACK_SUMMARY.md  Makefile  README.md  fly.toml  jobTrack.code-workspace  mypy.ini  package-lock.json  package.json  pyproject.toml  pyright-backend.json  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  fly-deploy.yml  mypy.yml
backend/: app.py  jobtrack_ai.py  leads.py
backend/ai/: __init__.py  providers.py
backend/jobtrack_core/: __init__.py  db.py  db_core.py  jobutils.py  request_utils.py  security.py  utils.py
backend/jobtrack_navigator_ai/: __init__.py  providers.py
backend/tests/: .gitignore  README.md  conftest.py  jest.config.mjs  test_analytics_endpoints.py  test_api_admin_applicants.py  test_api_analytics.py  test_api_auth.py  test_api_contacts.py  test_api_engagements.py  test_api_jobroles.py  test_api_organisations.py  test_api_settings.py  test_app.py  test_app_endpoints_extra.py  test_app_extra.py  test_app_helpers.py  test_contact_target_extra.py  test_contacts_crud.py  test_contacts_group_engagement_integration.py  test_engagement_encryption_db_store.py  test_engagements_modify.py  test_engagements_post.py  test_export_import_integration.py  test_export_integration.py  test_git_hygiene.py  test_jobroles_modify.py  test_jobroles_post.py  test_lead_contact_integration.py  test_leads_extra.py  test_leads_insertion.py  test_logging_config.py  test_navigator_db.py  test_navigator_module.py  test_navigator_providers.py  test_organisations_post.py  test_settings_run_sql.py  test_usersalt_encryption_integration.py
backend/utils/: __init__.py  encryption.py  export_utils.py
database/: README.md  jobtrack_navigator_ai_schema.sql  prime_test_db.sql  schema.sql  seed_referencedata_and_sector.sql
database/migrations/: 001_initial_schema.sql  002_create_contact_target_organisations.sql  (+56 more)
docker/: setup_navigator_db.sh
docs/: Action Plan.rtf  Changes to the contact table.docx  Coach mode spec.docx  Coaching centre.docx  I want to create a concept of heat in the hub.docx  I want to introduce an AI assistance module to the application.docx  JobTrack UI spec.docx  LINTING_AND_TYPING_PLAN.md  LinkedIn Contact Update.docx  Navigator AI becomes Navigator Insights.docx  Navigator briefing spec.docx  Navigator briefing.docx  Networking component.rtf  New JobTrack Website landing page.docx  REFACTOR_BIG_BANG_PLAN.md  REFACTOR_PLAN.md  TESTING.md  Updates to Navigator Insights.rtf  backend_reorg_plan.md  multi-contact-engagement-plan.md
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.integration.ts  vitest.config.ts
scripts/: build_seed_and_test.sh  build_seed_test_docker.sh  check_nav_decrypt.py  create_test_db.sh  db-manager.sh  db_fresh_docker.sh  export_jobtrack_db_image.sh  export_reference_data.py  generate_jobtrack_pg_key.sh  list_db_objects.sh  migrate.py  reformat_sql_newlines.py  run-tests.sh  run_local_docker.sh  setup_jobtrack_db.sh  start-frontend-dev.sh  start-server.sh  teardown_jobtrack_db.sh
templates/: landing.html
tools-python/: Import Data v2.py  Import Data.py  __init__.py  annotate_routes.py  check_nav_decrypt.py  consolidate_sectors.py  export_utils.py  fix_engagement_logs.py  fix_except_names.py  import_roles_from_csv.py  import_sectors_from_csv.py  migrate_jobrole_contact_fk.py  migrate_sectors.sh  puppeteer-debug.js  rename_jobapplication_to_jobrole.py  run-gunicorn-local.sh  sectordata.csv
(+262 files in other folders)
